# rustplan

./: .env  Cargo.toml  README.md  learnings.md  tasklist.md
.sqlx/: query-0bf66cb4f7a2a245330d1b45d380fee4a6e0ad79f264cdd1f60d79ed36bfbad0.json  query-1b77e2c08e9c157b37ac570918f55aa4368eece0c251411de818540435591023.json  query-207d7f199fee6d1163ab6a81c26d3bfc0758cf339887d7479e1c547de15e3e24.json  query-26d2265347e057315f4ca69327d63f6210e9285f73a37ff5a2806e297a55db98.json  query-327e297a9e01f62afa4523b1c401527f50a9e156ae7cfd295ef67b3947c1301c.json  query-50b2c6b27dc408c56cddaed4b4b6e1b9fec2e0ff94eb05f857a49401f6d0e1e0.json  query-a676b83b56eb80c99db1b7ef7e4e0483706f9698b35667ded97a4df5208a1c6c.json  query-b49cf7c34124b756adea13171e2bc7be4a30c3d260d1014d1fd67c423b700f06.json  query-cd6868baf270d0b33441f93602f1538be22ba1114f1398f1c98a2fb5037f719a.json  query-e92d940627f6aa74eb5473e87882e323b426c04c64b8ed2130f083be43d21690.json
migrations/: 20250528134801_init.sql  20250530083445_add_member_name.sql  20250530085003_wipe.sql  20250530085203_new_member_table.sql  20250530085456_new_member_non_null.sql  20250530092231_create_group.sql  20250530103834_tables.sql
src/: main.rs
src/db/: group.rs  member.rs  vote.rs
src/group/: group_handler.rs  mod.rs
src/handlers/: group.rs  member.rs  mod.rs  page.rs  vote.rs
src/member/: member_handler.rs  mod.rs
src/models/: app_state.rs  day_of_week.rs  error.rs  group.rs  member.rs  mod.rs  vote.rs
src/setup/: middleware.rs  mod.rs  (+1 more)
static/: host.css  host.js  httpService.js  participant.css  participant.js  renderService.js
(+9 files in other folders)
