[package]
name = "rustplan"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
dotenv = "0.15.0"
serde = "1.0.219"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "uuid",
    "derive",
] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
tower-http = { version = "0.6.2", features = ["fs"] }
